force-app/main/default/objects/Payment__c/fields/Advanced_Received__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Received__c</fullName>
    <label>Advanced Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>