force-app/main/default/objects/Payment__c/fields/Apartment_Number__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Number__c</fullName>
    <formula>Product__r.Appt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apartment Number</label>
    <type>Text</type>
</CustomField>