force-app/main/default/objects/Payment__c/fields/Applicant_Account__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Account__c</fullName>
    <label>Applicant Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>