force-app/main/default/objects/Payment__c/fields/Applicant_Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Business_Partner__c</fullName>
    <label>Applicant Business Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>