force-app/main/default/objects/Payment__c/fields/Assignment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Formula__c</fullName>
    <formula>If(
				(Assignment__c==&apos;Ageement Value&apos;|| Assignment__c==&apos;Agreement Value&apos;), &apos;Ageement Value&apos;,
					    If(Assignment__c==&apos;GST&apos;,&apos;GST&apos;, 
												    IF(Assignment__c==&apos;TDS&apos;,&apos;TDS&apos;,&apos;&apos;)																																																																			
											)  
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Formula</label>
    <type>Text</type>
</CustomField>