force-app/main/default/objects/Payment__c/fields/Base_Payable_Bank__c.field-meta.xml
<CustomField>
    <fullName>Base_Payable_Bank__c</fullName>
    <label>Base Payable Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>