force-app/main/default/objects/Payment__c/fields/Block_Dunning_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Block_Dunning_Cycle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Dunning Cycle</label>
    <type>Checkbox</type>
</CustomField>