force-app/main/default/objects/Payment__c/fields/Cheque_Clearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Clearing_Date__c</fullName>
    <label>Cheque Clearing Date</label>
    <type>Date</type>
</CustomField>