force-app/main/default/objects/Payment__c/fields/Cheque_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Transaction_Date__c</fullName>
    <label>Cheque / Transaction Date</label>
    <type>Date</type>
</CustomField>