force-app/main/default/objects/Payment__c/fields/Cheque_Transaction_No__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Transaction_No__c</fullName>
    <label>Cheque / Transaction No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>