force-app/main/default/objects/Payment__c/fields/Clearing_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Clearing_Document_Number__c</fullName>
    <label>Clearing Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>