force-app/main/default/objects/Payment__c/fields/CreatedYear__c.field-meta.xml
<CustomField>
    <fullName>CreatedYear__c</fullName>
    <formula>YEAR(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>