force-app/main/default/objects/Payment__c/fields/Customer_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Number__c</fullName>
    <label>Customer Contact Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>