force-app/main/default/objects/Payment__c/fields/Debit_Credit_Indicator_Code__c.field-meta.xml
<CustomField>
    <fullName>Debit_Credit_Indicator_Code__c</fullName>
    <label>Debit Credit Indicator Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>