force-app/main/default/objects/Payment__c/fields/Demand_Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Demand_Letter_Date__c</fullName>
    <label>Demand Letter Date</label>
    <type>Date</type>
</CustomField>