force-app/main/default/objects/Payment__c/fields/Document_Clearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Clearing_Date__c</fullName>
    <label>Document Clearing Date</label>
    <type>Date</type>
</CustomField>