force-app/main/default/objects/Payment__c/fields/Document_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_Code__c</fullName>
    <label>Document Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>