force-app/main/default/objects/Payment__c/fields/Dunning_Block__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Block__c</fullName>
    <label>Dunning Block</label>
    <length>255</length>
    <type>Text</type>
</CustomField>