force-app/main/default/objects/Payment__c/fields/Dunning_Block_Code__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Block_Code__c</fullName>
    <label>Dunning Block Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>