force-app/main/default/objects/Payment__c/fields/Dunning_Level__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Level__c</fullName>
    <label>Dunning Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>