force-app/main/default/objects/Payment__c/fields/Dz_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Dz_Receipt_Number__c</fullName>
    <label>Receipt Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>