force-app/main/default/objects/Payment__c/fields/Excess_Paid__c.field-meta.xml
<CustomField>
    <fullName>Excess_Paid__c</fullName>
    <label>Excess Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>