force-app/main/default/objects/Payment__c/fields/GST_Payable_Bank__c.field-meta.xml
<CustomField>
    <fullName>GST_Payable_Bank__c</fullName>
    <label>GST Payable Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>