force-app/main/default/objects/Payment__c/fields/Interest_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calculation_Date__c</fullName>
    <label>Interest Calculation Date</label>
    <type>Date</type>
</CustomField>