force-app/main/default/objects/Payment__c/fields/Interest_on_Outstanding_Demand__c.field-meta.xml
<CustomField>
    <fullName>Interest_on_Outstanding_Demand__c</fullName>
    <label>Interest on Outstanding Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>