force-app/main/default/objects/Payment__c/fields/Interest_Payable_Bank__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payable_Bank__c</fullName>
    <label>Interest Payable Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>