force-app/main/default/objects/Payment__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payments (Invoice)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>