force-app/main/default/objects/Payment__c/fields/Invoice_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Assignment__c</fullName>
    <formula>Invoice__r.Assignment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Assignment</label>
    <type>Text</type>
</CustomField>