force-app/main/default/objects/Payment__c/fields/Last_Dunned__c.field-meta.xml
<CustomField>
    <fullName>Last_Dunned__c</fullName>
    <label>Last Dunned</label>
    <type>Date</type>
</CustomField>