force-app/main/default/objects/Payment__c/fields/Net_Interest_Payable__c.field-meta.xml
<CustomField>
    <fullName>Net_Interest_Payable__c</fullName>
    <label>Net Interest Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>