force-app/main/default/objects/Payment__c/fields/Open_Clear_Payment__c.field-meta.xml
<CustomField>
    <fullName>Open_Clear_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Open/Clear Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>