force-app/main/default/objects/Payment__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number(SO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>