force-app/main/default/objects/Payment__c/fields/Outstanding_For_Demand__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_For_Demand__c</fullName>
    <label>Outstanding For Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>