force-app/main/default/objects/Payment__c/fields/Payment_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reminder_Date__c</fullName>
    <label>Payment Reminder Date</label>
    <type>Date</type>
</CustomField>