force-app/main/default/objects/Payment__c/fields/Payment_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Payment_Unique_Key__c</fullName>
    <label>Payment Unique Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>