force-app/main/default/objects/Payment__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <formula>Project__r.Name</formula>
    <label>Project Description</label>
    <type>Text</type>
</CustomField>