force-app/main/default/objects/Payment__c/fields/Reference_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Document_Number__c</fullName>
    <label>Reference Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>