force-app/main/default/objects/Payment__c/fields/Reference_Key__c.field-meta.xml
<CustomField>
    <fullName>Reference_Key__c</fullName>
    <label>Reference Key</label>
    <length>155</length>
    <type>Text</type>
</CustomField>