force-app/main/default/objects/Payment__c/fields/Rera_Carpet_Area_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Rera_Carpet_Area_Sq_ft__c</fullName>
    <formula>Product__r.Carpet_Area_RERA_Carpet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rera Carpet Area(Sq. ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>