force-app/main/default/objects/Payment__c/fields/Reversal_Doc__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Doc__c</fullName>
    <label>Reversal Doc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>