force-app/main/default/objects/Payment__c/fields/Reversal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Reason__c</fullName>
    <label>Reversal Reason</label>
    <type>TextArea</type>
</CustomField>