force-app/main/default/objects/Payment__c/fields/Reversal_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Reason_Code__c</fullName>
    <label>Reversal Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>