force-app/main/default/objects/Payment__c/fields/Sp_GL_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Sp_GL_Indicator__c</fullName>
    <label>Sp GL Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>