force-app/main/default/objects/Payment__c/fields/Total_Payable_In_Figures__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_In_Figures__c</fullName>
    <label>Total Payable (In Figures)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>