force-app/main/default/objects/Payment__c/fields/Toward_TDS__c.field-meta.xml
<CustomField>
    <fullName>Toward_TDS__c</fullName>
    <label>Toward TDS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>