force-app/main/default/objects/Payment__c/fields/Toward_TDS_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Toward_TDS_Outstanding__c</fullName>
    <label>Toward TDS Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>