force-app/main/default/objects/Payment__c/fields/Towards_Base_Value__c.field-meta.xml
<CustomField>
    <fullName>Towards_Base_Value__c</fullName>
    <label>Towards Base Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>