force-app/main/default/objects/Payment__c/fields/Towards_GST__c.field-meta.xml
<CustomField>
    <fullName>Towards_GST__c</fullName>
    <label>Towards GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>