force-app/main/default/objects/Payment__c/fields/Tower_Name__c.field-meta.xml
<CustomField>
    <fullName>Tower_Name__c</fullName>
    <formula>Product__r.Tower__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower Name</label>
    <type>Text</type>
</CustomField>