force-app/main/default/objects/Payment__c/fields/TowerId__c.field-meta.xml
<CustomField>
    <fullName>TowerId__c</fullName>
    <formula>Product__r.Tower__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TowerId</label>
    <type>Text</type>
</CustomField>