force-app/main/default/objects/Payment__c/fields/Unit_Category__c.field-meta.xml
<CustomField>
    <fullName>Unit_Category__c</fullName>
    <formula>TEXT(Product__r.Unit_Category__c)</formula>
    <label>Unit Category</label>
    <type>Text</type>
</CustomField>