force-app/main/default/objects/Payment__c/recordTypes/AB_Document.recordType-meta.xml
<RecordType>
    <fullName>AB_Document</fullName>
    <active>true</active>
    <label>AB Document</label>
</RecordType>