force-app/main/default/objects/Payment__c/recordTypes/Demand_Letter.recordType-meta.xml
<RecordType>
    <fullName>Demand_Letter</fullName>
    <active>true</active>
    <label>Demand Letter</label>
</RecordType>