force-app/main/default/objects/Payment__c/recordTypes/Receipt.recordType-meta.xml
<RecordType>
    <fullName>Receipt</fullName>
    <active>true</active>
    <label>Receipt</label>
</RecordType>