force-app/main/default/objects/Payment__c/validationRules/ISNEW.validationRule-meta.xml
<ValidationRule>
    <fullName>ISNEW</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISNEW(),
!CONTAINS($User.LastName, &apos;Arvind&apos;) 
)</errorConditionFormula>
    <errorMessage>Error. This operation is not allowed in SF sandbox instance.</errorMessage>
</ValidationRule>